# dev-platform

./: .gitignore  BACKUP_INSTRUCTIONS.md  CLAUDE.md  README.md  ROADMAP.md  backup-to-cosmo.sh  planning.md
commands/: README.md  code.md  dev.md  docs.md  gate.md  merge.md  plan.md  pr.md  review.md  smoke_test.md  test.md
docs/: CI-INTEGRATION.md  CONCURRENT-DEV.md  CROSS-REPO-COMMS.md  GLOSSARY.md  NEW-PROJECT.md  PROJECT_CLAUDE_TEMPLATE.md  RULE_RATIONALE.md  _config.yml  index.md
extensions/: README.md
hooks/: README.md  _emit_event.py  post-tool-heartbeat.sh  pre-tool-use.sh  session-start.sh  user-prompt.sh
monitoring/: README.md  aggregator.py  comms-consumers.json  comms_delivery.py  fleet_dashboard.py  fleet_pins.py  metrics.md  projects.json  remotes.json
scaffolding/: README.md
scaffolding/python-agent/: .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  README.md  docker-compose.yml  main.py  pyproject.toml
scaffolding/python-agent/.claude/: settings.json
scaffolding/python-agent/backend/: agent.py
scaffolding/python-agent/scripts/: gate_fast.sh  start_dev.sh
scaffolding/python-agent/tests/: conftest.py  test_smoke.py
scripts/: audit-project-drift.sh  check-comms-delivery.sh  check-phase-milestones.sh  check_env_leak.sh  check_spec_taxonomy.sh  compact_dev_milvus.py  fleet-gate.sh  fleet-install-template.sh  fleet-pins.sh  fleet-status.sh  gate_fast.sh  install-milvus-compact-timer.sh  install.sh  merge_settings.py  migrate-workflow-chain.sh  new-project.sh  report.sh  setup-consumer-labels.sh  sync-milestones.sh  sync-vscode.sh  (+3 more)
(+132 files in other folders)
